# vote

./: Procfile  app.py  file.txt  file1.txt  main.py  pyproject.toml  requirement.txt  requirements.txt
static/: a.webm  base.css  erorr.css  home.css  vote.css  voted.css
static/css/: main.css
static/index/: index.css
static/vote/: vote.css
templates/: 1.html  17.html  403.html  404.html  500.html  beta.html  index.html  mt.html  stat.html  test.html  tt.html  vg.html  vote.html  voted.html
